--- a/src/_html/_base/_includes/_footer.html
+++ b/src/_html/_base/_includes/_footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <a href="../../../index.html"><img class="logo" src="../../../assets/img/logo.png" alt="logo"></a>
         <nav>
-            <ul type="none">
+            <ul type="none" class="nav-footer">
                 <li><a href="../../../index.html">home</a></li>
                 <li><a href="../../../blog.html">about us</a></li>
                 <li>order now</li>
@@ -11,12 +11,26 @@
                 <li>contacts</li>
                 <li><a href="../../../blog.html">blog</a></li>
             </ul>
+            <div class="btn-group dropstart">
+                <button class="btn" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="../../../assets/img/burger.png" alt="burger" class="burger">
+                  </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="../../../index.html">home</a></li>
+                  <li><a class="dropdown-item" href="../../../blog.html">about us</a></li>
+                  <li><a class="dropdown-item" href="#">order now</a></li>
+                  <li><a class="dropdown-item" href="#">disclaimer</a></li>
+                  <li><a class="dropdown-item" href="#">why us</a></li>
+                  <li><a class="dropdown-item" href="#">contacts</a></li>
+                  <li><a class="dropdown-item" href="../../../blog.html">Blog</a></li>
+                </ul>
+            </div>
         </nav>
         <hr>
         <div class="row section">
-            <div class="col-3">
+            <div class="col-sm-3 col-12 section-item">
                 <p>Section number1</p>
-                <ul type="none">
+                <ul type="none" class="hidden-list">
                     <li>But I must explain to you how</li>
                     <li>Mistaken idea of denouncing</li>
                     <li>Praising pain was born</li>
@@ -27,9 +41,9 @@
                     <li>Praising pain was born</li>
                 </ul>
             </div>
-            <div class="col-3">
+            <div class="col-sm-3 col-12 section-item">
                 <p>Section number2</p>
-                <ul type="none">
+                <ul type="none" class="hidden-list">
                     <li>But I must explain to you how</li>
                     <li>Mistaken idea of denouncing</li>
                     <li>Praising pain was born</li>
@@ -40,9 +54,9 @@
                     <li>Praising pain was born</li>
                 </ul>
             </div>
-            <div class="col-3">
+            <div class="col-sm-3 col-12 section-item">
                 <p>Section number3</p>
-                <ul type="none">
+                <ul type="none" class="hidden-list">
                     <li>But I must explain to you how</li>
                     <li>Mistaken idea of denouncing</li>
                     <li>Praising pain was born</li>
@@ -53,9 +67,9 @@
                     <li>Praising pain was born</li>
                 </ul>
             </div>
-            <div class="col-3">
+            <div class="col-sm-3 col-12 section-item">
                 <p>Section number4</p>
-                <ul type="none">
+                <ul type="none" class="hidden-list">
                     <li>But I must explain to you how</li>
                     <li>Mistaken idea of denouncing</li>
                     <li>Praising pain was born</li>
@@ -69,23 +83,23 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-3 copyright">
+            <div class="col-lg-3 col-sm-6 col-12 copyright">
                 <p>Copyright В© 2017 BlueEssaySite.net <br> All rights reserved.</p>
             </div>
-            <div class="col-3 link-img">
+            <div class="col-lg-3 col-sm-6 col-12 link-img">
                 <a class="facebook" href="#"><img src="../../../assets/img/facebook.png" alt=""></a>
                 <a class="twitter" href="#"><img src="../../../assets/img/twitter.png" alt=""></a>
                 <a class="pinterest" href="#"><img src="../../../assets/img/pinterest.png" alt=""></a>
                 <a class="google-plus" href="#"><img src="../../../assets/img/google-plus.png" alt=""></a>
             </div>
-            <div class="col-3 footer-phone">
+            <div class="col-lg-3 col-sm-6 col-12 footer-phone">
                 <img class="phone-img" src="../../../assets/img/footer-phone.png" alt="">
                 <div class="phone-text">
                     <p>Toll free:</p>
                     <p class="number">+ 3 044 111 2732</p>
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-lg-3 col-sm-6 col-12 footer-phone">
                 <img class="email-img" src="../../../assets/img/footer-email.png" alt="">
                 <div class="email">
                     <p>Email:</p>
