--- a/src/assets/css/_components/_blockGirl.scss
+++ b/src/assets/css/_components/_blockGirl.scss
@@ -4,7 +4,7 @@
     background-position: center bottom;
     background-repeat: repeat-x;
     padding-top: 100px;
-    height: 620px;
+    height: 100%;
     animation: moveBackground 25s linear infinite;
     @keyframes moveBackground {
         0% {
@@ -14,6 +14,21 @@
             background-position: 100% bottom;
         }
     }
+    @media screen and (max-width: 768px){
+        padding-top: 50px;
+        text-align: center;
+    }
+    .girl{
+        @media screen and (max-width: 768px){
+            padding-top: 20px;
+        }
+        @media screen and (max-width: 400px){
+            width: 200px;
+        }
+    }
+    .button-border{
+        text-align: left;
+    }
 }
 .blockGirl .main-text h1{
     font-size: 47px;
@@ -21,14 +36,35 @@
     color: $bg-color-blue;
     font-weight: 900;
     font-family: 'Poppins-Bold';
+    text-align: left;
+    @media screen and (max-width: 992px){
+        font-size: 40px;
+    }
+    @media screen and (max-width: 400px){
+        font-size: 30px;
+    }
+    @media screen and (max-width: 313px){
+        font-size: 20px;
+    }
 }
 .blockGirl .main-text h1 span{
     color: #000;
+    text-align: left;
+    @media screen and (max-width: 992px){
+        font-size: 35px;
+    }
+    @media screen and (max-width: 400px){
+        font-size: 30px;
+    }
+    @media screen and (max-width: 313px){
+        font-size: 20px;
+    }
 }
 .blockGirl .main-text .progress{
     margin-top: 20px;
     background-color: #313537;
     height: 2px;
+    text-align: left;
 }
 .blockGirl .main-text .progress-bar{
     background-color: $bg-btn2;
@@ -39,6 +75,7 @@
     line-height: 30px;
     color: $p-color;
     font-weight: 400;
+    text-align: left;
     font-family: "Poppins-Regular";
 }
 .blockGirl .main-text button{
@@ -59,24 +96,31 @@
     }
 }
 .blockGirl .blue-line{
-    height: 135px;
+    height: 100%;
     filter: drop-shadow(0px 4px 15px rgba(202,202,202,0.15));
     background-color: $bg-color-blue;
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
     position: relative;
-    top: -20px;
-    
+    top: 70px;
+    padding: 30px;
+    margin-top: -90px;
+    @media screen and (max-width: 992px){
+        margin-bottom: 50px;
+    }
     p{
         font-size: 13px;
         color: #ffffff;
         font-weight: 500;
         font-family: "Poppins-Regular";
         margin: 0;
+        text-align: left;
+        @media screen and (max-width: 313px){
+            font-size: 10px;
+        }
     }
     select{
-        width: 202px;
+        width: 100%;
         height: 50px;
         border-radius: 3px;
         background-color: #f6f9f9;
@@ -86,11 +130,9 @@
         font-weight: 400;
         font-family: "Poppins-Regular";
         padding: 0 10px;
-        padding-right: 20px;
     }
     .counter{
         margin-top: 20px;
-        // width: 202px;
         height: 50px;
     }
 }
@@ -99,11 +141,9 @@
     z-index: 1;
 }
 .continue{
-    width: 202px;
     height: 50px;
     border-radius: 3px;
     background-color: $bg-btn1;
-    width: 178px;
     font-size: 14px;
     color: #ffffff;
     font-weight: 500;
