--- a/src/assets/css/_components/_testimonials.scss
+++ b/src/assets/css/_components/_testimonials.scss
@@ -47,4 +47,54 @@
         font-weight: 300;
         font-family: "Poppins-Regular";
     }
+    @media screen and (max-width: 768px){
+        .response{
+            padding-bottom: 60px;
+        }
+        h4{
+            margin-top: 220px;
+            
+        }
+    }
+    @media screen and (max-width: 512px){
+        h4{
+            margin-top: 250px;
+    
+        }
+    }
+    @media screen and (max-width: 450px){
+        .response{
+            padding-top: 60px;
+        }
+        h4{
+            margin-top: 280px;
+        }
+    }
+    @media screen and (max-width: 425px){
+        .response{
+            padding-top: 10px;
+        }
+        h4{
+            margin-top: 300px;
+            
+        }
+    }
+    @media screen and (max-width: 375px){
+        .response{
+            padding-top: 0px;
+        }
+        h4{
+            margin-top: 350px;
+            
+        }
+    }
+    @media screen and (max-width: 327px){
+        .response{
+            padding-top: 0px;
+        }
+        h4{
+            margin-top: 400px;
+            
+        }
+    }
 }
